--- a/main.css
+++ b/main.css
@@ -8,17 +8,18 @@ header,
 section h2,
 section h3,
 form button {
-    font-family: 'Bungee', cursive;
+    font-family: 'Josefin Sans', sans-serif;
     font-weight: normal;
 }
 
 body, input, textarea {
     font-family: 'Roboto', sans-serif;
+    background-color: #2d2a3f;
 }
 
 header {
     padding: 1rem 0;
-    background-color: #182c61;
+    background-color: #59017e;
     color: #ecf0f1;
 }
 
@@ -46,8 +47,14 @@ section .container {
     justify-content: space-between;
 }
 
+.main-image img{
+    height: 15rem;
+    border-radius: 5px;
+    border: 2px solid #ecf0f1;
+}
+
 .brands-list img{
-    height: 1.5rem;
+    height: 4.5rem;
 }
 
 .brands-list li {
@@ -61,7 +68,7 @@ section .container{
 
 section {
     padding: 1.5rem 0;
-    color: #182c61;
+    color: #ecf0f1;
 }
 
 section h2 {
@@ -77,7 +84,7 @@ section p {
 }
 
 .social-links img{
-    height: 1.5rem;
+    height: 2rem;
 }
 
 .social-links li {
@@ -98,13 +105,24 @@ section p {
     justify-content: space-between;
 }
 
-form input,
-form textarea,
-form button{
+.github-image img {
+    height: 2.5rem;
+}
+
+#project .container {
+    display: block;
+}
+
+    form input,
+    form textarea,
+    form button{
     display: block;
     width: 320px;
     margin-bottom: 0.5rem;
     padding: 0.5rem;
+    border-radius: 5px;
+    border: 2px solid #ecf0f1;
+    background-color: #ecf0f1;
 }
 
 form textarea {
@@ -117,22 +135,22 @@ section h3 {
 }
 
 form button {
-    background-color: #182c61;
+    background-color: #59017e;
     color: #ecf0f1;
     border: none;
     cursor: pointer;
 }
 
 form button:hover {
-    background-color: #314c97;
+    background-color: #59017e;
 }
 
 input:focus, textarea:focus {
-    outline-color: #182c61;
+    outline-color: #59017e;
 }
 
 footer {
-    background-color: #182c61;
+    background-color: #59017e;
     color: #ecf0f1;
     padding: 1rem 0;
 }
