--- a/main.css
+++ b/main.css
@@ -14,30 +14,49 @@ form button {
 
 body, input, textarea {
     font-family: 'Roboto', sans-serif;
-    background-color: #2d2a3f;
+    background-color: #000000;
 }
 
 header {
-    padding: 1rem 0;
-    background-color: #59017e;
+    padding: 10rem;
     color: #ecf0f1;
-}
-
-header nav li {
-    display: inline;
-    margin-left: 1rem;
-    font-size: 1.1rem;
-}
-
-header nav li a {
-    color: #ecf0f1;
-    text-decoration: none;
+    font-size: 4rem;
+    align-items: center;
+    justify-content: center;
+    background-image: url(images/fundo.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .container {
     max-width: 1280px;
     width: 100%;
     margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+}
+.info-container {
+    max-width: 1100px;
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 5rem;
+    justify-content: center;
+    align-items: center;
+}
+
+#project {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.title-container {
+    text-align: center;
+}
+
+.title-container h2 {
+    font-size: 3rem;
 }
 
 header .container,
@@ -47,19 +66,14 @@ section .container {
     justify-content: space-between;
 }
 
+.image-plans img{
+    width: 100%;
+}
+
 .main-image img{
-    height: 15rem;
+    height: 10rem;
     border-radius: 5px;
-    border: 2px solid #ecf0f1;
-}
-
-.brands-list img{
-    height: 4.5rem;
-}
-
-.brands-list li {
-    display: inline;
-    margin-right: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 section .container{
@@ -77,6 +91,7 @@ section h2 {
 
 section p {
     margin-bottom: 0.5rem;
+    margin-right: 15rem;
 }
 
 .store-font {
@@ -98,15 +113,6 @@ section p {
 
 #contact .container {
     display: block;
-}
-
-.contact-metods {
-    display: flex;
-    justify-content: space-between;
-}
-
-.github-image img {
-    height: 2.5rem;
 }
 
 #project .container {
@@ -153,4 +159,274 @@ footer {
     background-color: #59017e;
     color: #ecf0f1;
     padding: 1rem 0;
+}
+
+.contact-metods {
+    display: flex;
+    justify-content: space-between;
+}
+
+.social-links img{
+    height: 2rem;
+}
+
+.social-links li {
+    display: inline;
+    margin-right: 0.5rem;
+}
+
+.social-links li a {
+    text-decoration: none;
+}
+
+/* BUTTON COMPRAR */
+
+.btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 13rem;
+    height: 3rem;
+    background-size: 300% 300%;
+    backdrop-filter: blur(1rem);
+    border-radius: 5rem;
+    transition: 0.5s;
+    animation: gradient_301 5s ease infinite;
+    border: double 4px transparent;
+    background-image: linear-gradient(#212121, #212121),  linear-gradient(137.48deg, #ffdb3b 10%,#FE53BB 45%, #8F51EA 67%, #0044ff 87%);
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+    text-decoration: none;
+}
+
+#container-stars {
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    transition: 0.5s;
+    backdrop-filter: blur(1rem);
+    border-radius: 5rem;
+}
+
+strong {
+    z-index: 2;
+    font-family: 'Avalors Personal Use';
+    font-size: 12px;
+    letter-spacing: 5px;
+    color: #FFFFFF;
+    text-shadow: 0 0 4px white;
+}
+#glow {
+    position: absolute;
+    display: flex;
+    width: 12rem;
+}
+
+.circle {
+    width: 100%;
+    height: 30px;
+    filter: blur(2rem);
+    animation: pulse_3011 4s infinite;
+    z-index: -1;
+}
+
+.circle:nth-of-type(1) {
+    background: rgba(254, 83, 186, 0.636);
+}
+
+.circle:nth-of-type(2) {
+    background: rgba(142, 81, 234, 0.704);
+}
+
+.btn:hover #container-stars {
+    z-index: 1;
+    background-color: #212121;
+}
+
+.btn:hover {
+    transform: scale(1.1)
+}
+
+.btn:active {
+    border: double 4px #FE53BB;
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+    animation: none;
+}
+
+.btn:active .circle {
+    background: #FE53BB;
+}
+
+#stars {
+    position: relative;
+    background: transparent;
+    width: 200rem;
+    height: 200rem;
+}
+
+#stars::after {
+    content: "";
+    position: absolute;
+    top: -10rem;
+    left: -100rem;
+    width: 100%;
+    height: 100%;
+    animation: animStarRotate 90s linear infinite;
+}
+
+#stars::after {
+    background-image: radial-gradient(#ffffff 1px, transparent 1%);
+    background-size: 50px 50px;
+}
+
+#stars::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -50%;
+    width: 170%;
+    height: 500%;
+    animation: animStar 60s linear infinite;
+}
+
+#stars::before {
+    background-image: radial-gradient(#ffffff 1px, transparent 1%);
+    background-size: 50px 50px;
+    opacity: 0.5;
+}
+
+@keyframes animStar {
+    from {
+    transform: translateY(0);
+    }
+
+    to {
+    transform: translateY(-135rem);
+    }
+}
+
+@keyframes animStarRotate {
+    from {
+    transform: rotate(360deg);
+    }
+
+    to {
+    transform: rotate(0);
+    }
+}
+
+@keyframes gradient_301 {
+    0% {
+    background-position: 0% 50%;
+    }
+
+    50% {
+    background-position: 100% 50%;
+    }
+
+    100% {
+    background-position: 0% 50%;
+    }
+}
+
+@keyframes pulse_3011 {
+    0% {
+    transform: scale(0.75);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+    }
+
+    70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+    }
+
+    100% {
+    transform: scale(0.75);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+}
+
+/* card sale */
+
+.card-container {
+    max-width: 1100px;
+    width: 100%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-top: 6rem;
+    padding-bottom: 4rem;
+}
+
+.card {
+    width: 300px;
+    border-radius: 5px;
+    padding: 10px;
+    text-align: center;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.card img {
+    width: 100%;
+    max-height: 200px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.card h3 {
+    margin-top: 10px;
+    color: #ecf0f1;
+}
+
+.card p {
+    margin-bottom: 10px;
+    color: #ecf0f1;
+}
+
+.card a {
+    margin-left: 35px;
+    margin-top: 10px
+}
+
+/* card comparison */
+
+.comparison-card {
+    background-color: #f2f2f2;
+    border: 4px solid #59017e;
+    border-radius: 20px;
+    padding: 10px;
+    margin-bottom: 10px;
+    color: #000000;
+    width: 30%;
+    
+}
+
+.comparison {
+    background-color: #8b04a2;
+    border-radius: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
+    padding-top: 5px;
+    text-align: center;
+    color: #ecf0f1;
+}
+
+.content {
+    padding: 10px;
+}
+
+ul {
+    list-style-type: disc; /* ou square, circle */
+    padding-left: 20px;
+}
+
+li {
+    margin-bottom: 5px;
 }
