--- a/main.css
+++ b/main.css
@@ -35,13 +35,35 @@ header {
     justify-content: center;
     align-items: center;
 }
+
+#about {
+    text-align: center;
+}
+
 .info-container {
-    max-width: 1100px;
-    width: 100%;
-    margin: 0 auto;
-    margin-bottom: 5rem;
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+}
+
+.main-image {
+    list-style: none;
+    margin: 0;
+    padding: 10PX;
+}
+
+.text-info {
+    max-width: 850px; /* Ajuste conforme necessário */
+    text-align: center;
+    margin: 20px auto;
+}
+
+.text-welcome {
+    max-width: 1100px; /* Ajuste conforme necessário */
+    text-align: center;
+    margin: 20px auto;
+    font-size: 30px;
 }
 
 #project {
@@ -66,12 +88,53 @@ section .container {
     justify-content: space-between;
 }
 
+#sobre {
+    overflow: hidden; /* Evita que conteúdo exceda as bordas */
+}
+
+.slideshow-container {
+    overflow: hidden;
+    position: relative;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-bottom: 600px;
+}
+
+.mySlides {
+    position: absolute;
+    max-width: 1200px;
+    width: 100%; /* Ajuste a largura conforme necessário */
+    transition: left 1s ease; /* Adicione uma transição suave */
+}
+
+.sobre-container {
+    display: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.image-user img {
+    width: 100%; /* Certifique-se de que a imagem ocupa 100% da largura do contêiner */
+}
+
+h2 {
+    color: #cacaca;
+}
+
+p {
+    color: #fff;
+}
+
 .image-plans img{
     width: 100%;
 }
 
 .main-image img{
-    height: 10rem;
+    height: 15rem;
     border-radius: 5px;
     margin-bottom: 1rem;
 }
@@ -371,6 +434,7 @@ strong {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    box-shadow: 0 0 10px rgba(225, 0, 255, 0.5);
 }
 
 .card img {
@@ -405,6 +469,7 @@ strong {
     margin-bottom: 10px;
     color: #000000;
     width: 30%;
+    box-shadow: 0 0 15px rgba(225, 0, 255, 0.8);
     
 }
 
@@ -429,4 +494,501 @@ ul {
 
 li {
     margin-bottom: 5px;
+}
+
+
+.botao-estatico {
+    position: fixed;
+    bottom: 30px; /* Distância da parte inferior */
+    right: 40px; /* Distância da direita */
+    z-index: 999; /* Garante que o botão esteja acima de outros elementos */
+}
+
+.botao-estatico a {
+    display: block;
+    width: 50px; /* Largura do botão */
+    height: 50px; /* Altura do botão */ /* Cor de fundo do botão (pode ser ajustada) */
+    border-radius: 50%; /* Torna o botão circular, ajuste conforme necessário */
+    text-align: center;
+    line-height: 50px; /* Centraliza o ícone verticalmente */
+    color: #fff; /* Cor do ícone */
+    text-decoration: none; /* Remove o sublinhado do link */
+}
+
+.botao-estatico img {
+    width: 60px; /* Largura do ícone (ajuste conforme necessário) */
+    height: 60px; /* Altura do ícone (ajuste conforme necessário) */
+}
+
+
+/* ############################################################################## */
+
+@media (max-width: 768px) {
+
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    
+    header,
+    section h2,
+    section h3,
+    form button {
+        font-family: 'Josefin Sans', sans-serif;
+        font-weight: normal;
+    }
+    
+    body, input, textarea {
+        font-family: 'Roboto', sans-serif;
+        background-color: #000000;
+    }
+    
+    header {
+        padding: 2rem;
+        color: #ecf0f1;
+        font-size: 1rem;
+        align-items: center;
+        justify-content: center;
+        background-image: url(images/fundo.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    
+    .container {
+        max-width: 768px;
+        width: 100%;
+        margin: 0 auto;
+        justify-content: center;
+        align-items: center;
+    }
+    .info-container {
+        max-width: 350px;
+        width: 100%;
+        margin: 0 auto;
+        margin-bottom: 3rem;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    
+    #project {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 1rem;
+    }
+    
+    .title-container {
+        text-align: center;
+    }
+    
+    .title-container h2 {
+        font-size: 1.5rem;
+    }
+    
+    header .container,
+    section .container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+    .image-plans img{
+        width: 100%;
+    }
+    
+    .main-image img{
+        height: 10rem;
+        border-radius: 5px;
+        margin-bottom: 1rem;
+    }
+    
+    section .container{
+        align-items: flex-start;
+    }
+    
+    section {
+        padding: 1.5rem 0;
+        color: #ecf0f1;
+    }
+    
+    section h2 {
+        margin-bottom: 1rem;
+    }
+    
+    section p {
+        margin-bottom: 0.5rem;
+        margin-right: 0.5rem;
+    }
+    
+    .store-font {
+        margin-left: 3rem;
+    }
+    
+    #contact .container {
+        display: block;
+    }
+    
+    #project .container {
+        display: flex
+    }
+    
+        form input,
+        form textarea,
+        form button{
+        display: block;
+        width: 320px;
+        margin-bottom: 0.5rem;
+        padding: 0.5rem;
+        border-radius: 5px;
+        border: 2px solid #ecf0f1;
+        background-color: #ecf0f1;
+    }
+    
+    form textarea {
+        resize: none;
+        height: 180px;
+    }
+    
+    section h3 {
+        margin-bottom: 1rem;
+    }
+    
+    form button {
+        background-color: #59017e;
+        color: #ecf0f1;
+        border: none;
+        cursor: pointer;
+        margin-bottom: 2rem;
+    }
+    
+    form button:hover {
+        background-color: #59017e;
+    }
+    
+    input:focus, textarea:focus {
+        outline-color: #59017e;
+    }
+    
+    footer {
+        background-color: #59017e;
+        color: #ecf0f1;
+        padding: 1rem 0;
+    }
+    
+    .contact-metods {
+        display: flex;
+        flex-direction: column;
+        padding: 50px;
+    }
+    
+    .social-links img{
+        height: 2rem;
+    }
+    
+    .social-links li {
+        display: inline;
+        margin-right: 0.5rem;
+    }
+    
+    .social-links li a {
+        text-decoration: none;
+    }
+    
+    /* BUTTON COMPRAR */
+    
+    .btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 13rem;
+        height: 3rem;
+        background-size: 300% 300%;
+        backdrop-filter: blur(1rem);
+        border-radius: 5rem;
+        transition: 0.5s;
+        animation: gradient_301 5s ease infinite;
+        border: double 4px transparent;
+        background-image: linear-gradient(#212121, #212121),  linear-gradient(137.48deg, #ffdb3b 10%,#FE53BB 45%, #8F51EA 67%, #0044ff 87%);
+        background-origin: border-box;
+        background-clip: content-box, border-box;
+        text-decoration: none;
+    }
+    
+    #container-stars {
+        position: absolute;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        transition: 0.5s;
+        backdrop-filter: blur(1rem);
+        border-radius: 5rem;
+    }
+    
+    strong {
+        z-index: 2;
+        font-family: 'Avalors Personal Use';
+        font-size: 12px;
+        letter-spacing: 5px;
+        color: #FFFFFF;
+        text-shadow: 0 0 4px white;
+    }
+    #glow {
+        position: absolute;
+        display: flex;
+        width: 12rem;
+    }
+    
+    .circle {
+        width: 100%;
+        height: 30px;
+        filter: blur(2rem);
+        animation: pulse_3011 4s infinite;
+        z-index: -1;
+    }
+    
+    .circle:nth-of-type(1) {
+        background: rgba(254, 83, 186, 0.636);
+    }
+    
+    .circle:nth-of-type(2) {
+        background: rgba(142, 81, 234, 0.704);
+    }
+    
+    .btn:hover #container-stars {
+        z-index: 1;
+        background-color: #212121;
+    }
+    
+    .btn:hover {
+        transform: scale(1.1)
+    }
+    
+    .btn:active {
+        border: double 4px #FE53BB;
+        background-origin: border-box;
+        background-clip: content-box, border-box;
+        animation: none;
+    }
+    
+    .btn:active .circle {
+        background: #FE53BB;
+    }
+    
+    #stars {
+        position: relative;
+        background: transparent;
+        width: 200rem;
+        height: 200rem;
+    }
+    
+    #stars::after {
+        content: "";
+        position: absolute;
+        top: -10rem;
+        left: -100rem;
+        width: 100%;
+        height: 100%;
+        animation: animStarRotate 90s linear infinite;
+    }
+    
+    #stars::after {
+        background-image: radial-gradient(#ffffff 1px, transparent 1%);
+        background-size: 50px 50px;
+    }
+    
+    #stars::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: -50%;
+        width: 170%;
+        height: 500%;
+        animation: animStar 60s linear infinite;
+    }
+    
+    #stars::before {
+        background-image: radial-gradient(#ffffff 1px, transparent 1%);
+        background-size: 50px 50px;
+        opacity: 0.5;
+    }
+    
+    @keyframes animStar {
+        from {
+        transform: translateY(0);
+        }
+    
+        to {
+        transform: translateY(-135rem);
+        }
+    }
+    
+    @keyframes animStarRotate {
+        from {
+        transform: rotate(360deg);
+        }
+    
+        to {
+        transform: rotate(0);
+        }
+    }
+    
+    @keyframes gradient_301 {
+        0% {
+        background-position: 0% 50%;
+        }
+    
+        50% {
+        background-position: 100% 50%;
+        }
+    
+        100% {
+        background-position: 0% 50%;
+        }
+    }
+    
+    @keyframes pulse_3011 {
+        0% {
+        transform: scale(0.75);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+        }
+    
+        70% {
+        transform: scale(1);
+        box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+        }
+    
+        100% {
+        transform: scale(0.75);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+        }
+    }
+    
+    /* card sale */
+    
+    .card-container {
+        max-width: 568px;
+        width: 100%;
+        margin: auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding-top: 0.5rem;
+        padding-bottom: 2rem;
+    }
+    
+    .card {
+        width: 300px;
+        border-radius: 5px;
+        padding: 10px;
+        text-align: center;
+        margin-bottom: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        box-shadow: 0 0 10px rgba(225, 0, 255, 0.5);
+    }
+    
+    .card img {
+        width: 100%;
+        max-height: 200px;
+        object-fit: cover;
+        border-radius: 5px;
+    }
+    
+    .card h3 {
+        margin-top: 10px;
+        color: #ecf0f1;
+    }
+    
+    .card p {
+        margin-bottom: 10px;
+        color: #ecf0f1;
+    }
+    
+    .card a {
+        margin-left: 35px;
+        margin-top: 10px
+    }
+    
+    /* card comparison */
+    
+    .comparison-card {
+        background-color: #f2f2f2;
+        border: 4px solid #59017e;
+        border-radius: 20px;
+        padding: 20px;
+        margin-bottom: 1px;
+        color: #000000;
+        width: 80%;
+        box-shadow: 0 0 15px rgba(225, 0, 255, 0.8);
+        
+    }
+    .comparison h2{
+        font-size: 20px;
+    }
+    
+    .comparison {
+        background-color: #8b04a2;
+        border-radius: 10px;
+        padding-top: 5px;
+        color: #fff;
+        width: 60%;
+    }
+    
+    .content {
+        padding: 10px;
+    }
+    
+    ul {
+        list-style-type: disc; /* ou square, circle */
+        padding-left: 2px;
+    }
+    
+    li {
+        margin-bottom: 5px;
+    }
+
+    .slideshow-container {
+        overflow: hidden;
+        position: relative;
+        align-items: center;
+        max-width: 700px;
+        margin: 0 auto;
+        padding-bottom: 300px;
+    }
+    
+    .mySlides {
+        position: absolute;
+        max-width: 700px;
+        width: 100%; /* Ajuste a largura conforme necessário */
+        transition: left 1s ease; /* Adicione uma transição suave */
+    }
+    
+    .sobre-container {
+        display: none;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        max-width: 700px;
+        margin: 0 auto;
+        padding: 5px;
+    }
+    
+    .image-user img {
+        border-radius: 10%;
+        max-width: 320px;
+        height: auto;
+    }
+
+    .text-welcome {
+        max-width: 700px; /* Ajuste conforme necessário */
+        text-align: center;
+        margin: 20px auto;
+        font-size: 20px;
+        padding: 20px;
+    }
+
 }
